feat: put images in the index

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blank HTML Page</title>
+    <title>Github placeholder domain for pearpages.com</title>
 </head>
 <body>
-
+    <img src="./legon-ninja.webp" alt="ninja pear" />
+    <img src="./pear-ninja.webp" alt="ninja lego" />
 </body>
 </html>
