--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Github placeholder domain for pearpages.com</title>
-</head>
-<body>
-    <img src="./legon-ninja.webp" alt="ninja pear" />
-    <img src="./pear-ninja.webp" alt="ninja lego" />
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>pages.ninja: Be a Ninja!</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Protest+Revolution&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="./styles.css" />
+  </head>
+  <body>
+    <main>
+      <h1>Ninjas are cool!</h1>
+      <div class="container">
+        <img class="image image1" src="./legon-ninja.webp" alt="ninja pear" />
+        <img class="image image2" src="./pear-ninja.webp" alt="ninja lego" />
+      </div>
+      <footer>
+        <h2>Be a Ninja!</h2>
+        <a href="https://pearpages.com">pearpages.com</a>
+      </footer>
+    </main>
+  </body>
 </html>
